navbar/links set

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -7,16 +7,16 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
+            <a class="nav-link active text-white" aria-current="page" href="{% url "homer:home" %}">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" href="#">About</a>
+            <a class="nav-link text-white" href="{% url "homer:about" %}">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" href="#">Projects</a>
+            <a class="nav-link text-white" href="{% url "homer:projects" %}">Projects</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" href="#">Reach me</a>
+            <a class="nav-link text-white" href="{% url "homer:contact" %}">Reach me</a>
           </li>
           {% comment %} <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
