--- a/home/templates/home/projects.html
+++ b/home/templates/home/projects.html
@@ -1,13 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects</title>
-</head>
-<body>
-    <h1>Basic Portfolio Project</h1>
+{% extends 'base.html' %}
+
+
+{% block 'content' %}
+<h1>Basic Portfolio Project</h1>
     <div>
         {% for char in data %}
         <ul>
@@ -19,5 +14,4 @@
         </ul>
         {% endfor %}
     </div>
-</body>
-</html>
+{% endblock 'content' %}
