--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,18 @@
 {% block 'content' %}
 {% include 'slider.html' %}
 
+<!-- <div class="container text-center my-4 text-primary">
+<h4>About me</h4>
+</div> -->
+<div class="container text-center">
+  <div class="row">
+    <div class="col align-self-start">
+      <h4>About Me</h4>
+    </div>
+   </div>
+</div>
+
+{% include 'cards.html' %}
 {% endblock 'content' %}
 
 
