--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -42,3 +42,7 @@
       </div>
     </div>
   </nav>
+<div class="alert alert-warning alert-dismissible fade show mb-0" role="alert">
+  <strong>Avalaible for job!</strong> Contact me if you have a job for me.
+  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+</div>
