--- a/home/templates/home/projects.html
+++ b/home/templates/home/projects.html
@@ -8,7 +8,9 @@
             {% for project in projects %}
             <div class="col">
                 <div class="card my-3">
-                  <img src="{{ project.images.url }}" class="card-img-top" alt="...">
+                    {% if project.images %}
+                        <img src="{{ project.images.url }}" class="card-img-top" alt="...">
+                    {% endif %}
                   <div class="card-body">
                     <h5 class="card-title">{{ project.title }}</h5>
                     <p class="card-text">{{ project.description|truncatewords:15 }}</p>
