--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -34,6 +34,9 @@
           <li class="nav-item">
             <a class="nav-link text-white" href="{% url "homer:contact" %}">Reach me</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" href="{% url "homer:reg_project" %}">Submit a Project</a>
+          </li>
         </ul>
         <form class="d-flex" role="search">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
