--- a/home/templates/home/projects.html
+++ b/home/templates/home/projects.html
@@ -2,7 +2,7 @@
 
 
 {% block 'content' %}
-<h3 class="text-center mt-3">Project List</h3>
+<h2 class="text-center mt-3 font-bold">Project List</h2>
     <div class="container">
         <div class="row row-cols-1 row-cols-md-3">
             {% for project in projects %}
