--- a/home/templates/home/project_details.html
+++ b/home/templates/home/project_details.html
@@ -2,12 +2,21 @@
 
 
 {% block 'content' %}
-
+<div class="container">
+	<a href="{% url 'homer:projects' %}"><button class="btn btn-primary my-3">  Back to Projects</button></a>
+</div>
+<hr>
 <div class="container">
 	<h2 class="font-bold"> {{ project.date_started }}: </h2>
 
 	<p> {{ project.title }}</p>
-</div>
+	{% for category in categories %}
+		<ul> 
+			<li>
+				{{ category }}
+			</li>
 
-    
+		</ul>
+	{% endfor %}
+</div>
 {% endblock 'content' %}
