--- a/home/templates/home/projects.html
+++ b/home/templates/home/projects.html
@@ -3,22 +3,42 @@
 
 {% block 'content' %}
 <h2 class="text-center mt-3 font-bold">Project List</h2>
-    <div class="container">
-        <div class="row row-cols-1 row-cols-md-3">
-            {% for project in projects %}
-            <div class="col">
-                <div class="card my-3">
-                    {% if project.images %}
-                        <img src="{{ project.images.url }}" class="card-img-top" alt="...">
-                    {% endif %}
-                  <div class="card-body">
-                    <h5 class="card-title">{{ project.title }}</h5>
-                    <p class="card-text">{{ project.description|truncatewords:15 }}</p>
-                    <a href="#" class="btn btn-primary">See projects details</a>
-                  </div>
-                </div>
+<div class="container">
+    <div class="row row-cols-1 row-cols-md-3">
+        {% for project in page_obj %}
+        <div class="col">
+            <div class="card my-2">
+                {% if project.images %}
+                    <img src="{{ project.images.url }}" class="card-img-top" alt="...">
+                {% endif %}
+              <div class="card-body">
+                <h5 class="card-title font-bold">{{ project.title }}</h5>
+                <p class="card-text">{{ project.description|safe|truncatewords:15 }}
+                </p>
+                <br>
+                <a href="{% url 'homer:project_details' project.pk %}" class="btn btn-primary">See projects details</a>
+              </div>
             </div>
-            {% endfor %}
-        </div>                 
-    </div>
+        </div>
+        {% endfor %}
+    </div>                 
+</div>
+
+<div class="container pagination my-5 place-content-center">
+    <span class="step-links">
+        {% if page_obj.has_previous %}
+            <a href="?page=1"> <button class="btn btn-secondary mx-5"> &laquo; First </button></a>
+            <a href="?page={{ page_obj.previous_page_number }}"> <button class="btn btn-secondary mx-5"> Previous </button></a>
+        {% endif %}
+
+        <span class="current">
+            Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+        </span>
+
+        {% if page_obj.has_next %}
+            <a href="?page={{ page_obj.next_page_number }}"> <button class="btn btn-secondary mx-5"> Next </button></a>
+            <a href="?page={{ page_obj.paginator.num_pages }}"> <button class="btn btn-secondary mx-5"> Last &raquo; </button></a>
+        {% endif %}
+    </span>
+</div>
 {% endblock 'content' %}
