--- a/home/templates/home/projects.html
+++ b/home/templates/home/projects.html
@@ -27,8 +27,8 @@
 <div class="container pagination my-5 place-content-center">
     <span class="step-links">
         {% if page_obj.has_previous %}
-            <a href="?page=1"> <button class="btn btn-secondary mx-5"> &laquo; First </button></a>
-            <a href="?page={{ page_obj.previous_page_number }}"> <button class="btn btn-secondary mx-5"> Previous </button></a>
+            <a href="?page=1"> <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full mx-5"> &laquo; First </button></a>
+            <a href="?page={{ page_obj.previous_page_number }}"> <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full mx-5"> Previous </button></a>
         {% endif %}
 
         <span class="current">
@@ -36,8 +36,8 @@
         </span>
 
         {% if page_obj.has_next %}
-            <a href="?page={{ page_obj.next_page_number }}"> <button class="btn btn-secondary mx-5"> Next </button></a>
-            <a href="?page={{ page_obj.paginator.num_pages }}"> <button class="btn btn-secondary mx-5"> Last &raquo; </button></a>
+            <a href="?page={{ page_obj.next_page_number }}"> <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full mx-5"> Next </button></a>
+            <a href="?page={{ page_obj.paginator.num_pages }}"> <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full mx-5"> Last &raquo; </button></a>
         {% endif %}
     </span>
 </div>
