--- a/home/templates/home/project_details.html
+++ b/home/templates/home/project_details.html
@@ -3,20 +3,22 @@
 
 {% block 'content' %}
 <div class="container">
-	<a href="{% url 'homer:projects' %}"><button class="btn btn-primary my-3">  Back to Projects</button></a>
+	<a href="{% url 'homer:projects' %}"><button class="btn btn-primary my-2">  Back to Projects</button></a>
 </div>
 <hr>
 <div class="container">
-	<h2 class="font-bold"> {{ project.date_started }}: </h2>
+	<p class="font-bold text-4xl my-3"> {{ project.title }} </p>
 
-	<p> {{ project.title }}</p>
+	<div class="grid-cols-2 gap-1 justify-between">		
 	{% for category in categories %}
-		<ul> 
-			<li>
-				{{ category }}
-			</li>
-
-		</ul>
+		<span class="bg-indigo-100 text-indigo-800 text-sm font-medium mr-2 px-2.5 py-0.5 rounded dark:bg-indigo-200 dark:text-indigo-900">{{ category }}</span>
 	{% endfor %}
+	</div>
+
+	<div class="grid-cols-2 gap-1 justify-between py-2">
+	{% for keyword in keywords %}
+		<span class="bg-gray-100 text-gray-800 text-xs font-semibold mr-2 px-2.5 py-0.5 rounded dark:bg-gray-700 dark:text-gray-300">{{ keyword }}</span>
+	{% endfor %}
+	</div>
 </div>
 {% endblock 'content' %}
