--- a/home/templates/home/project_details.html
+++ b/home/templates/home/project_details.html
@@ -6,19 +6,40 @@
 	<a href="{% url 'homer:projects' %}"><button class="btn btn-primary my-2">  Back to Projects</button></a>
 </div>
 <hr>
-<div class="container">
-	<p class="font-bold text-4xl my-3"> {{ project.title }} </p>
+<div class="container grid grid-cols-2">
+	<div>
+		<p class="font-bold text-3xl my-2"> {{ project.title }} </p>
 
-	<div class="grid-cols-2 gap-1 justify-between">		
-	{% for category in categories %}
-		<span class="bg-indigo-100 text-indigo-800 text-sm font-medium mr-2 px-2.5 py-0.5 rounded dark:bg-indigo-200 dark:text-indigo-900">{{ category }}</span>
-	{% endfor %}
+		<div class="grid-cols-2 gap-1 justify-between">		
+		{% for category in categories %}
+			<span class="bg-indigo-100 text-indigo-800 text-sm font-medium mr-2 px-2.5 py-0.5 rounded dark:bg-indigo-200 dark:text-indigo-900">{{ category }}</span>
+		{% endfor %}
+		</div>
+
+		<div class="grid-cols-2 gap-1 justify-between py-2">
+		{% for keyword in keywords %}
+			<span class="bg-gray-100 text-gray-800 text-xs font-semibold mr-2 px-2.5 py-0.5 rounded dark:bg-gray-700 dark:text-gray-300">{{ keyword }}</span>
+		{% endfor %}
+		</div>
+		<div class="grid grid-cols-2 gap-1 justify-between">
+			
+			 {% for image in images %} 
+			<a href="{{ image.images.url }}" style="cursor: zoom-in !important;"> <img src="{{ image.images.url }}" class="card-img-top" alt="..."> </a>	
+				
+			{% endfor %}
+		</div>
+	</div>
+	<div class="my-2">
+		
+		<div class="max-w-2xl p-6 bg-white border border-gray-200 rounded-lg shadow-md dark:bg-gray-800 dark:border-gray-700">
+		    <a href="#">
+		        <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Project Description</h5>
+		    </a>
+		    <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">{{ project.description|safe }}</p>
+		    
+		</div>
+
 	</div>
 
-	<div class="grid-cols-2 gap-1 justify-between py-2">
-	{% for keyword in keywords %}
-		<span class="bg-gray-100 text-gray-800 text-xs font-semibold mr-2 px-2.5 py-0.5 rounded dark:bg-gray-700 dark:text-gray-300">{{ keyword }}</span>
-	{% endfor %}
-	</div>
 </div>
 {% endblock 'content' %}
