Update template progressive, image delete implemented

--- a/home/templates/home/project_details.html
+++ b/home/templates/home/project_details.html
@@ -32,7 +32,7 @@
 		<div class="grid grid-cols-2 gap-1 justify-between">
 			
 			 {% for image in images %} 
-			<a href="{{ image.images.url }}" style="cursor: zoom-in !important;"> <img src="{{ image.images.url }}" class="card-img-top" alt="..."> </a>	
+			<a href="{{ image.images.url }}" style="cursor: zoom-in !important;"> <img src="{{ image.images.url }}" class="card-img-top w-65 h-50"> </a>	
 				
 			{% endfor %}
 		</div>
