Image and project delete implemented with confirmation prompts

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -18,6 +18,7 @@
               Projects
             </a>
             <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="{% url "homer:projects" %}">All</a></li>
               <li><a class="dropdown-item" href="#">Django</a></li>
               <li><a class="dropdown-item" href="#">Desktop</a></li>
               <li><a class="dropdown-item" href="#">Laravel</a></li>
