--- a/home/templates/home/project_details.html
+++ b/home/templates/home/project_details.html
@@ -8,7 +8,7 @@
 	
 	<a href="{% url 'homer:update_project' project.pk %}"> <button type="button" class="text-gray-900 bg-gradient-to-r from-red-200 via-red-300 to-yellow-200 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-red-100 dark:focus:ring-red-400 font-medium rounded-lg text-sm px-2 py-1 text-center mr-2 mb-2">Edit Project</button></a>
 
-	<button type="button" class=" mt-4 text-white bg-gradient-to-r from-red-400 via-red-500 to-red-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 shadow-lg shadow-red-500/50 dark:shadow-lg dark:shadow-red-800/80 font-medium rounded-lg text-sm px-2 py-1 text-center mr-2 ml-2 mb-2">Delete Project</button>
+	<a href="{% url 'home:delete_project' project.pk %}"> <button onclick="return confirm('Do you really want to delete this project?')" type="button" class=" mt-4 text-white bg-gradient-to-r from-red-400 via-red-500 to-red-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 shadow-lg shadow-red-500/50 dark:shadow-lg dark:shadow-red-800/80 font-medium rounded-lg text-sm px-2 py-1 text-center mr-2 ml-2 mb-2">Delete Project</button></a>
 	</div>
 
 
@@ -32,7 +32,7 @@
 		<div class="grid grid-cols-2 gap-1 justify-between">
 			
 			 {% for image in images %} 
-			<a href="{{ image.images.url }}" style="cursor: zoom-in !important;"> <img src="{{ image.images.url }}" class="card-img-top w-65 h-50"> </a>	
+			<a href="{{ image.images.url }}" style="cursor: zoom-in !important;"> <img src="{{ image.images.url }}" class="card-img-top w-70 h-auto"> </a>	
 				
 			{% endfor %}
 		</div>
