--- a/home/templates/home/update_project.html
+++ b/home/templates/home/update_project.html
@@ -22,17 +22,21 @@
 	<h4 class="text-center text-xl my-3 font-bold">Project Images</h4>
 </div>
 
-<!-- Project Images grid grid-flow-col auto-cols-max gap-x-5-->
+<!-- JavaScript Funtion that confirms delete -->
+
+
+
+<!-- Project Images -->
 <div class="container grid grid-cols-3 gap-2 mx-auto bg-blue-300 p-3 rounded-lg">
 {% for image in images %}
 <div class="mx-1 w-fit rounded bg-white border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700">
     <div class="flex justify-end px-1 pt-1">
-    <a href="{% url 'home:delete_image' image.pk %}">    <button id="dropdownButton" class="text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 focus:ring-4 focus:outline-none focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-1.5" type="button">
+    <a href="{% url 'home:delete_image' image.pk %}"> <button onclick="return confirm('Are you sure you want to delete this image?')" id="dropdownButton" class="text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 focus:ring-4 focus:outline-none focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-1.5" type="button">
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-width="1.5" class="w-5 h-5" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" d="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0"/>
         <title>Delete</title>
         <desc> Deletes Item </desc>
         </svg>
-        </button> </a>
+        </button></a>
     </div>
     <div class="flex flex-col items-center pb-2 px-2">
     	
