--- a/home/templates/home/projects.html
+++ b/home/templates/home/projects.html
@@ -12,7 +12,7 @@
     {% for project in page_obj %}
         <div class="col">
             <div class="card my-2">
-            <img src="{{ project.images_set.first }}" class="card-img-top" alt="...">
+            <img src="{{ project.images_set.first }}" class="card-img-top">
               <div class="card-body">
                 <h5 class="card-title font-bold">{{ project.title }}</h5>
                 <p class="card-text">{{ project.description|safe|truncatewords:15 }}
