--- a/templates/base.html
+++ b/templates/base.html
@@ -9,11 +9,25 @@
   </head>
   <body>
     {% include 'navbar.html' %}
+    {% include 'messages.html' %}
+
+    
+    
     {% block 'content' %}
    
-    
     {% endblock 'content' %}
+
+  <script>
+    var message_ele = document.getElementById("msg");
+
+    setTimeout(function(){ 
+       message_ele.style.display = "none"; 
+    }, 5000);
+  </script>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    
+    
+  
   </body>
 </html>
