--- a/home/templates/home/project_details.html
+++ b/home/templates/home/project_details.html
@@ -14,7 +14,7 @@
 
 </div>
 <hr>
-<div class="container grid grid-cols-2">
+<div class="container grid grid-cols-2 gap-x-2">
 	<div>
 		<p class="font-bold text-3xl my-2"> {{ project.title }} </p>
 
