--- a/home/templates/home/update_project.html
+++ b/home/templates/home/update_project.html
@@ -23,7 +23,7 @@
 </div>
 
 <!-- Project Images -->
-<div class="container grid grid-cols-3 gap-2 mx-auto bg-blue-300 p-3 rounded-lg">
+<div class="container grid grid-cols-3 gap-2 mx-auto bg-red-300 p-3 rounded-lg">
 {% for image in images %}
 <div class="mx-1 w-fit rounded bg-white border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700">
     <div class="flex justify-end px-1 pt-1">
@@ -53,5 +53,6 @@
 </div>
 
 {% endblock 'content' %}
+
 
 
