--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,58 +1,3 @@
-<!-- <nav class="navbar navbar-expand-lg bg-info">
-    <div class="container-fluid">
-      <a class="navbar-brand text-light" href="#">Developer Abiola</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active text-white" aria-current="page" href="{% url "homer:home" %}">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-white" href="{% url "homer:about" %}">About</a>
-          </li>
-                  
-        <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle text-white" href="{% url "homer:projects" %}"role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Projects
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="{% url "homer:projects" %}">All</a></li>
-              <li><a class="dropdown-item" href="#">Django</a></li>
-              <li><a class="dropdown-item" href="#">Desktop</a></li>
-              <li><a class="dropdown-item" href="#">Laravel</a></li>
-              <li><a class="dropdown-item" href="#">Flask</a></li>
-              <li><a class="dropdown-item" href="#">Data Analysis</a></li>
-              <li><a class="dropdown-item" href="#">Data Science</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Others</a></li>
-            </ul>
-          </li>
-          {% comment %} <li class="nav-item">
-            <a class="nav-link disabled">Disabled</a>
-          </li> {% endcomment %}
-          <li class="nav-item">
-            <a class="nav-link text-white" href="{% url "homer:contact" %}">Reach me</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-white" href="{% url "homer:reg_project" %}">Submit a Project</a>
-          </li>
-        </ul>
-        <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn text-white bg-warning" type="submit">Search</button>
-        </form>
-      </div>
-    </div>
-  </nav>
-<div class="alert alert-warning alert-dismissible fade show mb-0" role="alert">
-  <strong>Avalaible for job!</strong> Contact me if you have a job for me.
-  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-</div> -->
-
-
- 
 <nav class="bg-red-100 border-gray-200 dark:bg-gray-900">
     <div class="flex flex-wrap justify-between items-center mx-auto max-w-screen-xl px-4 md:px-6 py-2.5">
         <a href="https://flowbite.com" class="flex items-center">
@@ -101,11 +46,17 @@
                     <li><a class="dropdown-item hover:underline" href="#">Others</a></li>
                   </ul>
                 </li>
-                    <a href="#" class="text-white dark:text-white hover:underline">Team</a>
+                    <a href="#" class="text-white dark:text-white hover:underline">Teams</a>
                 </li>
-                <li class="">
-                    <a class="text-red-400 hover:underline font-bold font-sans bg-white rounded p-1" href="{% url 'homer:reg_project' %}">Submit a Project</a>
+
+                <li>
+                    <a class="static text-red-400 hover:underline font-bold font-sans bg-white rounded p-1" href="{% url 'homer:reg_project' %}">Submit a Project</a>
                 </li>
+                {% if request.user.is_authenticated %} 
+                <li>
+                    <a href="{% url 'homer:myprojects' %}" class="text-white dark:text-white hover:underline">My Projects</a>
+                </li>
+                {% endif %}
             </ul>
           
         </div>
@@ -127,3 +78,4 @@
           <!-- End of search -->
    
 </nav>
+
