--- a/home/templates/home/project_details.html
+++ b/home/templates/home/project_details.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load embed_video_tags %}
 
 
 {% block 'content' %}
@@ -41,8 +42,9 @@
 			{% endfor %}
 		</div>
 		{% if project.video %}
-		    <div class="content-center mx-auto text-center mt-4">
-			Project video: <a href="{{ project.video }}" class="text-blue-500 underline"> {{ project.video }} </a>
+		    <div class="content-center mx-auto text-center mt-4 mb-5">
+		    	Project video:
+		    	<div class="mx-auto object-center px-12 mt-2">	{% video project.video 'small' %} </div>			
 			</div>
 		{% else %}
 		    <div>
@@ -63,6 +65,14 @@
 
 		    	<h5 class=" text-l font-bold tracking-tight text-gray-900 dark:text-white">Project Ended: <span class="font-normal text-gray-700 dark:text-gray-400"> {{ project.date_ended }} </span></h5>
 		    </div>
+		    {% if  contributors %}
+		    <div class="mt-2 flex">
+		    	<h5 class=" text-l font-bold tracking-tight text-gray-900 dark:text-white">Contributors: 
+		    	{% for contributor in contributors %}    		
+		    	<span class="bg-gray-100 text-sm font-medium mr-2 px-2.5 py-0.5 rounded dark:bg-indigo-200 dark:text-indigo-900"> {{ contributor }} </span></h5>
+		    	{% endfor %}
+		    </div>
+		    {% endif %}
 		    
 		    <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">{{ project.description|safe }}</p>
 
