More models: User Profile, Work experience, Education and Publications

--- a/home/templates/home/projects.html
+++ b/home/templates/home/projects.html
@@ -19,7 +19,7 @@
                 </p>
                 <br>
                 <a href="{% url 'homer:project_details' project.pk %}" class="btn btn-primary">See projects details</a>
-                <span class="ml-10"> Project by: <a href="#" class="font-medium text-blue-400 bg-red-100 rounded p-0.5 pb-1 p-x-1 underline font-bold"> @{{ project.user }} </a></span>
+                <span class="ml-10"> Project by: <a href="#" class="font-medium text-blue-400 italic rounded p-0.5 pb-1 p-x-1 underline font-bold"> @{{ project.user }} </a></span>
               </div>
             </div>
         </div>
