--- a/home/templates/home/update_project.html
+++ b/home/templates/home/update_project.html
@@ -46,7 +46,7 @@
 <form method="POST" enctype="multipart/form-data">
 	{% csrf_token %}
 	<h4 class="font-bold py-3 text-sm">Add more images</h4>
-	<input type="file" name="images" multiple accept="image/png, image/gif, image/jpeg"><br>
+	<input type="file" name="images" multiple accept="image/png, image/gif, image/jpeg image/jpg"><br>
 
 	<input type="submit" name="Submit" value = "Add" class="my-3 text-white bg-blue-500 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
 </form>
