--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,9 +1,69 @@
-<nav class="bg-red-100 border-gray-200 dark:bg-gray-900">
+{% load static %}
+<script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>   <!-- dropdown js -->
+
+<nav class="w-full bg-red-100 border-gray-200 dark:bg-gray-900">
     <div class="flex flex-wrap justify-between items-center mx-auto max-w-screen-xl px-4 md:px-6 py-2.5">
         <a href="https://flowbite.com" class="flex items-center">
             <img src="https://flowbite.com/docs/images/logo.svg" class="h-6 mr-3 sm:h-9" alt="Flowbite Logo" />
-            <span class="text-red-400 self-center text-xl font-semibold whitespace-nowrap dark:text-white">Developer's Portal</span>
+            <span class="text-red-400 self-center text:lg lg:text-xl font-semibold whitespace-nowrap dark:text-white">Developer's Portal</span>
         </a>
+        
+        <form class="md:mb-0 md:order-last md:pr-8 -mr-10" action="">
+            <input class="w-full lg:w-72 py-1 pl-3 rounded-full focus:outline-0" type="text" placeholder="Search.. projects, developers.."
+                name="search">
+            <!-- <button class="-ml-8 bg-trasparent" type="submit"><i
+                    class="fa fa-search text-gray-400"></i></button> -->
+        </form>
+    </div>
+</nav>
+
+
+<!-- 2  -->
+
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
+ <nav class="relative w-full px-5 flex justify-between items-center h-14 bg-red-500 drop-shadow-md">
+    <!-- Logo -->
+    <div>
+        <a href="#" class="text-white text-2xl font-semibold italic">
+            DO<span class="text-amber-500">CODE</span>
+        </a>
+    </div>
+
+    <!-- This div and its children show up when screen's width >= 769px (md breakpoint) -->
+    <div id="main-nav"
+        class="hidden absolute top-14 right-0 px-5 py-10 bg-red-400 h-screen flex flex-col 
+        md:flex md:space-y-0 md:relative md:top-0 md:right-0 md:p-0 md:flex-row md:h-full md:flex-grow md:justify-between md:items-center md:ml-10">
+        <!-- Menu Links -->
+        <div
+            class="order-last flex flex-col items-end text-white space-y-3  md:flex-row md:items-start md:order-first md:space-y-0 md:space-x-3 text-sm font-medium">
+            <a class="text-white hover:underline ml-2" href="#">Home</a>
+            <a class="hover:text-white hover:underline" href="{% url 'homer:projects' %}">All Projects</a>
+            <div @click.away="open = false" class="relative" x-data="{ open: false }">
+                <a @click="open = !open" class="flex flex-row items-center text-sm font-semibold text-left dark-mode:bg-transparent dark-mode:focus:text-white dark-mode:hover:text-white dark-mode:focus:bg-gray-600 dark-mode:hover:bg-gray-600 md:w-auto md:inline md:mt-0 md:ml-4 hover:text-white">
+                  <span class="hover:underline pl-0 ml-0"> Categories</span>
+                  <svg fill="currentColor" viewBox="0 0 20 20" :class="{'rotate-180': open, 'rotate-0': !open}" class="inline w-4 h-4 mt-1 ml-1 transition-transform duration-200 transform md:-mt-1"><path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
+                </a>
+                <div x-show="open" x-transition:enter="transition ease-out duration-100" x-transition:enter-start="transform opacity-0 scale-95" x-transition:enter-end="transform opacity-100 scale-100" x-transition:leave="transition ease-in duration-75" x-transition:leave-start="transform opacity-100 scale-100" x-transition:leave-end="transform opacity-0 scale-95" class="absolute right-0 w-full mt-2 origin-top-right rounded-md shadow-lg md:w-48">
+                  <div class="px-2 py-2 bg-white rounded-md shadow dark-mode:bg-gray-800">
+                    <a class="block px-4 py-2 mt-2 text-sm font-semibold rounded-lg dark-mode:bg-transparent dark-mode:hover:bg-gray-600 dark-mode:focus:bg-gray-600 dark-mode:focus:text-white dark-mode:hover:text-white dark-mode:text-gray-200 md:mt-0 text-red-400 hover:text-red-400 focus:text-red-900 hover:bg-blue-200 focus:bg-red-200 focus:outline-none focus:shadow-outline hover:underline" href="#">Django</a>
+                    <a class="block px-4 py-2 mt-2 text-sm font-semibold rounded-lg dark-mode:bg-transparent dark-mode:hover:bg-gray-600 dark-mode:focus:bg-gray-600 dark-mode:focus:text-white dark-mode:hover:text-white dark-mode:text-gray-200 md:mt-0 text-red-400 hover:text-red-400 focus:text-red-900 hover:bg-blue-200 focus:bg-red-200 focus:outline-none focus:shadow-outline" href="#">Desktop</a>
+                    <a class="block px-4 py-2 mt-2 text-sm font-semibold rounded-lg dark-mode:bg-transparent dark-mode:hover:bg-gray-600 dark-mode:focus:bg-gray-600 dark-mode:focus:text-white dark-mode:hover:text-white dark-mode:text-gray-200 md:mt-0 text-red-400 hover:text-red-400 focus:text-red-900 hover:bg-blue-200 focus:bg-red-200 focus:outline-none focus:shadow-outline hover:underline" href="#">Laravel</a>
+                    <a class="block px-4 py-2 mt-2 text-sm font-semibold rounded-lg dark-mode:bg-transparent dark-mode:hover:bg-gray-600 dark-mode:focus:bg-gray-600 dark-mode:focus:text-white dark-mode:hover:text-white dark-mode:text-gray-200 md:mt-0 text-red-400 hover:text-red-400 focus:text-red-900 hover:bg-blue-200 focus:bg-red-200 focus:outline-none focus:shadow-outline hover:underline" href="#">Data Science</a>
+                  </div>
+                </div>
+            </div>
+            <a class="text-red-400 hover:underline font-bold font-sans bg-white rounded p-1" href="{% url 'homer:reg_project' %}">Submit a Project</a>
+            
+            {% if request.user.is_authenticated %}
+            <a href="{% url 'homer:myprojects' %}" class="text-white dark:text-white hover:underline">My Projects</a>
+            {% endif %}
+
+    </div>
+
+        <!-- dropdown -->
+
+
+        <!-- Search box -->
         <div class="flex items-center">
             {% if request.user.is_authenticated %}
             <span class="mr-2">Welcome {{ request.user.username }}</span>
@@ -13,69 +73,31 @@
               <a href="{% url 'signup' %}" class="mr-6 text-sm font-medium text-blue-600 dark:text-blue-500 hover:underline">Signup</a>
               <a href="{% url 'login' %}" class="mr-6 text-sm font-medium text-blue-600 dark:text-blue-500 hover:underline">Login</a>
                 
-            {% endif %}
-            
+            {% endif %}          
             
         </div>
     </div>
+
+    <!-- The hamburger icon to open/close the #main-nav when screen width < 768px (mobile devices) -->
+    <a class="md:hidden text-white text-2xl" href="javascript:void(0)" onclick="toggleMenu()"><i
+            id="toggle-menu-icon" class="fa-bars fa-solid"></i></a>
+
 </nav>
-<nav class="relative bg-red-400 dark:bg-gray-700">
-    <div class="max-w-screen-xl px-4 py-3 mx-auto md:px-6">
-        <div class="flex items-center">
-            <ul class="flex flex-row mt-0 mr-6 space-x-8 text-sm font-medium">
-                
-                 <li>
-                  <a href="{% url 'homer:home' %}" class="text-white hover:text-blue-400 hover:underline" aria-current="page">Home</a>
-                </li>
-                <li>
-                  <a class="text-white hover:underline" href="{% url 'homer:about' %}">About</a>
-              </li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle text-white hover:underline" href="{% url 'homer:projects' %}"role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Projects
-                  </a>
-                  <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="{% url 'homer:projects' %}">All</a></li>
-                    <li><a class="dropdown-item hover:underline" href="#">Django</a></li>
-                    <li><a class="dropdown-item hover:underline" href="#">Desktop</a></li>
-                    <li><a class="dropdown-item hover:underline" href="#">Laravel</a></li>
-                    <li><a class="dropdown-item hover:underline" href="#">Flask</a></li>
-                    <li><a class="dropdown-item hover:underline" href="#">Data Analysis</a></li>
-                    <li><a class="dropdown-item hover:underline" href="#">Data Science</a></li>
-                    <li><hr class="dropdown-divider hover:underline"></li>
-                    <li><a class="dropdown-item hover:underline" href="#">Others</a></li>
-                  </ul>
-                </li>
-                    <a href="#" class="text-white dark:text-white hover:underline">Teams</a>
-                </li>
 
-                <li>
-                    <a class="static text-red-400 hover:underline font-bold font-sans bg-white rounded p-1" href="{% url 'homer:reg_project' %}">Submit a Project</a>
-                </li>
-                {% if request.user.is_authenticated %} 
-                <li>
-                    <a href="{% url 'homer:myprojects' %}" class="text-white dark:text-white hover:underline">My Projects</a>
-                </li>
-                {% endif %}
-            </ul>
-          
-        </div>
+<!-- Other content -->
 
-    </div>
-     <!-- Search form -->
 
-            <div class="absolute top-0 right-0 flex justify-center max-w-sm mt-1.5 mr-4">
-                <div class="input-group  flex flex-wrap items-stretch w-full">
-                <input type="search" class="form-control relative flex-auto min-w-0 block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-white bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none" placeholder="Search" aria-label="Search" aria-describedby="button-addon2">
-                <button class="btn inline-block px-6 py-2.5 bg-blue-600 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700  focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out flex items-center" type="button" id="button-addon2">
-                  <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="search" class="w-4" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-                    <path fill="currentColor" d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"></path>
-                  </svg>
-                </button>
-              </div>
-            </div>
+<!-- Javascript code -->
+<script>
+    var mainNav = document.getElementById("main-nav");
+    var toggleMenuIcon = document.getElementById("toggle-menu-icon");
 
-          <!-- End of search -->
-   
-</nav>
+    function toggleMenu() {
+        mainNav.classList.toggle('hidden');
+
+        // change the icon when the menu is shown/closed
+        toggleMenuIcon.classList.toggle('fa-bars');
+        toggleMenuIcon.classList.toggle('fa-times');
+    }
+</script>
 
