--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -68,6 +68,8 @@
             {% if request.user.is_authenticated %}
             <span class="mr-2">Welcome {{ request.user.username }}</span>
                 <a href="{% url 'logout' %}" class="mr-6 text-sm font-medium text-blue-600 dark:text-blue-500 hover:underline">Logout</a>
+
+                <a href="{% url 'homer:profile' %}" class="mr-6 text-sm font-medium text-blue-600 dark:text-blue-500 hover:underline">Profile</a>
             {% else %}
 
               <a href="{% url 'signup' %}" class="mr-6 text-sm font-medium text-blue-600 dark:text-blue-500 hover:underline">Signup</a>
